core/cu29_derive/tests/compile_fail/cu_msg/non_existent_message.rs
use cu29_derive::gen_cumsgs;

gen_cumsgs!("config/non_existent_message.ron");

fn main() {}