core/cu29_derive/tests/compile_fail/cu_msg/non_existent_message.stderr
error[E0412]: cannot find type `MyMsg` in this scope
 --> tests/compile_fail/cu_msg/non_existent_message.rs:3:1
  |
3 | gen_cumsgs!("config/non_existent_message.ron");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
  |
  = note: this error originates in the macro `gen_cumsgs` (in Nightly builds, run with -Z macro-backtrace for more info)
